--- a/.github/workflows/lunch_menu.yml
+++ b/.github/workflows/lunch_menu.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   scrape-and-notify:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # ubuntu-latest 대신!
     
     steps:
     - name: Checkout code
